# fx

./: .project  CMakeLists.txt  README.md  build  update
bot/: DockerHubDOckerfile  DockerHubDockerfileAlpine  Dockerfile  DockerfileAlpine  api_client.py  api_client_temp.py  decimal_to_precision.py  deploy.sh  docker-compose.yml  dorckerfile  elephant.py  errors.py  exchange.py  flyermonitor.py  fraction.py  hft.py  inago.py  indicator.py  losscut.py  mmbot.py  ohlcvbuilder.py  order.py  pod.py  privleged_containers.py  risky_roles.yaml  role.py  scalping.py  settings.py  sfdbot.py  smm.py  spread_catcher.py  static_risky_roles.py  strategy.py  streaming.py  test.py  test_crypto.py  utils.py  vbtc.py  verify_ssl.rb  volbot.py  (+1 more)
bot/bots/: order.py
bot/bs/: exchange.py
bot1/: jwt_phone.rb  jwt_token.py
bot3/test/: esignature  legacy-ecdsa  legacy-ecdsa.test.js
conf/: bot.conf  brokers.conf
simplefx/: CMakeLists  datasrc.h  fndef.h  httpjson.cpp  httpjson.h  log.h  market.cpp  market.h  quotedist.cpp  quotestream.cpp  quotestream.h  tradingengine.cpp  tradingengine.h
www/: sw.js
